# LegalR

./: .env  README.md  main.py  pyproject.toml  text  text.txt  utils.py
